unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Amount_Currency__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Amount_Currency__c</fullName>
    <formula>ia_crm__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>