unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Billing_Start_Date__c</fullName>
    <inlineHelpText>The Opportunity Product Billing Start Date must be after Contract Start Date.</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>