unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Change_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New MRR</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Add on MRR</fullName>
            </value>
            <value>
                <fullName>Renewal upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>