unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Class__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Class__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ia_crm__Class__c.ia_crm__Status__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Class__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>