unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__If_Usage_Exceeds_The_Committed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__If_Usage_Exceeds_The_Committed_Quantity__c</fullName>
    <label>If Usage Exceeds The Committed Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill overage</fullName>
            </value>
            <value>
                <fullName>Don’t allow overage</fullName>
            </value>
            <value>
                <fullName>Do nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>