unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Intacct_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Contract Line</label>
    <referenceTo>ia_crm__Intacct_Contract_Line__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>