unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Intacct_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_ID__c</fullName>
    <formula>IF( Opportunity.RecordType.DeveloperName = &#39;Contract&#39;, IF( ISPICKVAL( ia_crm__Intacct_Location__r.ia_crm__Entity_Type__c , &#39;Entity&#39;), ia_crm__Intacct_Location__r.ia_crm__Intacct_Entity_ID__c , &#39;&#39;), IF( ISPICKVAL( ia_crm__Intacct_Entity__r.ia_crm__Entity_Type__c , &#39;Entity&#39;), ia_crm__Intacct_Entity__r.ia_crm__Intacct_Entity_ID__c , &#39;&#39;))</formula>
    <label>Intacct Entity ID</label>
    <type>Text</type>
</CustomField>