unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__On_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__On_Contract_End_Date__c</fullName>
    <label>On Contract End Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill unused quantity</fullName>
            </value>
            <value>
                <fullName>Cancel unused quantity</fullName>
            </value>
            <value>
                <fullName>Do nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>