unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Prorate__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Prorate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorate</label>
    <type>Checkbox</type>
</CustomField>