unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Quantity_Type__c</fullName>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>