unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Recurring__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>