unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Renewal_BillingTemplate__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_BillingTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Billing Template</label>
    <referenceTo>ia_crm__Billing_Template__c</referenceTo>
    <relationshipLabel>Opportunity Product (Renewal Billing Template)</relationshipLabel>
    <relationshipName>Opportunity_Product_RBT</relationshipName>
    <type>Lookup</type>
</CustomField>