unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Renewal_Only__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renewal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this line is used for renewal only</inlineHelpText>
    <label>Renewal Only</label>
    <type>Checkbox</type>
</CustomField>