unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Reset_Usage_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Reset_Usage_Quantity__c</fullName>
    <label>Reset Usage Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After each renewal</fullName>
            </value>
            <value>
                <fullName>After each invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>