unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__SFDC_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(OpportunityId)</formula>
    <label>SFDC Opportunity Id</label>
    <type>Text</type>
</CustomField>