unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>