unpackaged/main/default/objects/OpportunityLineItem/fields/ia_crm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Start_Date__c</fullName>
    <inlineHelpText>The Opportunity Product Start Date must be after Contract Start Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>