unpackaged/main/default/objects/OpportunityLineItem/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The site this line item applies to.</description>
    <inlineHelpText>The site this line item applies to.</inlineHelpText>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>