unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Price_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Inc_VAT__c</fullName>
    <formula>TotalPrice +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>