unpackaged/main/default/objects/OpportunityLineItem/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF( Opportunity.Application__r.VAT__c   &gt; 0 , 
			  TotalPrice  * 0.2,
			 0
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>