unpackaged/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Billing_Template_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Billing_Template_Dates_Required</fullName>
    <active>false</active>
    <description>For &#39;Use billing template&#39; Billing template, Billing start and Billing End date should be required.</description>
    <errorConditionFormula>IF( Opportunity.RecordType.DeveloperName = &#39;Contract&#39; ,IF(ISPICKVAL(ia_crm__Contract_Line_Save_Cancel_He__c, &#39;Use billing template&#39;), IF(OR(ISBLANK( ia_crm__Billing_Start_Date__c), ISBLANK( ia_crm__Billing_End_Date__c),  ISBLANK( ia_crm__Billing_Template__r.Name ) ), true, false),false), false)</errorConditionFormula>
    <errorMessage>Billing Template, Billing Start Date and Billing End Date are required when Flat/Fixed amount frequency is &#39;Use billing template&#39;.</errorMessage>
</ValidationRule>