unpackaged/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Contract_Dates_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Contract_Dates_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Opportunity.RecordType.DeveloperName = &#39;Contract&#39;,
IF(!ISBLANK(Opportunity.ContractId), 
OR( 
IF(AND(!(AND(ia_crm__Start_Date__c &gt;= Opportunity.Contract.StartDate, ia_crm__Start_Date__c &lt;= Opportunity.Contract.EndDate)), !ISBLANK(ia_crm__Start_Date__c)) , true, false), 
IF(AND(!(AND(ia_crm__End_Date__c &gt;= Opportunity.Contract.StartDate, ia_crm__End_Date__c &lt;= Opportunity.Contract.EndDate)), !ISBLANK(ia_crm__End_Date__c)) , true, false), 
IF(ISPICKVAL( ia_crm__Contract_Line_Save_Cancel_He__c , &#39;Use billing template&#39;), 
OR( 
IF(!(AND(ia_crm__Billing_Start_Date__c &gt;= Opportunity.Contract.StartDate, ia_crm__Billing_Start_Date__c &lt;= Opportunity.Contract.EndDate)) , true, false), 
IF(!(AND(ia_crm__Billing_End_Date__c &gt;= Opportunity.Contract.StartDate, ia_crm__Billing_End_Date__c &lt;= Opportunity.Contract.EndDate)) , true, false) 
), false) 
), false), false)</errorConditionFormula>
    <errorMessage>If the Opportunity has a Contract associated with it dates must be within the Start Date and End Date of the Contract.</errorMessage>
</ValidationRule>