unpackaged/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Flat_Fixed_amount_frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Flat_Fixed_amount_frequency</fullName>
    <active>false</active>
    <description>If &#39;Flat/Fixed amount frequency&#39; = &#39;One Time&#39; or &#39;Include with every invoice&#39;, then the Start Date and End Date should be required.</description>
    <errorConditionFormula>IF(Opportunity.RecordType.DeveloperName = &#39;Contract&#39;,
IF(OR(ISPICKVAL(ia_crm__Contract_Line_Save_Cancel_He__c, &#39;One-time&#39;), ISPICKVAL(ia_crm__Contract_Line_Save_Cancel_He__c, &#39;Include with every invoice&#39;)),IF(OR(ISBLANK( ia_crm__Start_Date__c ),ISBLANK( ia_crm__End_Date__c )), true, false), false), false)</errorConditionFormula>
    <errorDisplayField>ia_crm__Contract_Line_Save_Cancel_He__c</errorDisplayField>
    <errorMessage>If &#39;Flat/Fixed amount frequency&#39; = &#39;One Time&#39; or &#39;Include with every invoice&#39; the Start Date and End Date are required.</errorMessage>
</ValidationRule>