unpackaged/main/default/objects/OpportunityLineItem/validationRules/ia_crm__Quantity_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ia_crm__Quantity_Rate_Required</fullName>
    <active>false</active>
    <description>If Rate, Quantity or Multiplier, then both Rate and Quantity need to be filled in.</description>
    <errorConditionFormula>IF(Opportunity.RecordType.DeveloperName = &#39;Contract&#39;,
AND(OR(NOT(ISBLANK(UnitPrice)), NOT(ISBLANK(Quantity)), NOT(ISBLANK( ia_crm__Multiplier__c ))), OR(ISBLANK(UnitPrice), ISBLANK(Quantity))), false)</errorConditionFormula>
    <errorMessage>Incomplete input data is provided for &#39;Rate&#39;, &#39;Quantity&#39;, and &#39;Multiplier&#39;.</errorMessage>
</ValidationRule>